--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,65 @@
+/* approccio: desktop first  */
+
 /* RESET  */
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+/* COMMONS +++++++++++++++++++++++++++++++++++++*/
+/* utilities +++++++++++++++++++++++++++++++++++++*/
+
+/* bg colors +++++++++++++++++++++++++++++++++++++*/
+
+.bg-green {
+    background-color: green;
+}
+
+.bg-red {
+    background-color: red;
+}
+
+.bg-grey {
+    background-color: grey;
+}
+
+
+/* <!-- <Boolzapp back +++++++++++++++++++++++++++++++++++++ > --> */
+
+
+.Boolzapp-back {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    /* debug */
+    border: 5px solid black;
+    height: 100vh;
+    width: 100vw;
+}
+
+.main-container {}
+
+.back-header {
+    height: 10%;
+    width: 100%;
+    /* debug */
+    border: 1px solid black;
+    min-height: 50px;
+    min-width: 200px;
+}
+
+.back-footer {
+    height: 90%;
+    width: 100%;
+
+    /* debug */
+    border: 1px solid black;
+    min-height: 200px;
+    min-width: 200px;
+
 }
