--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,47 @@
     height: 100%;
 }
 
+.pic-block{
+    height: 100%;
+    max-height: 50px;
+    min-height: 30px;
+    aspect-ratio: 1;
+
+    /* debug */
+    background-color: blue;
+    border: 1px solid green;
+}
+
+.options-block{
+    height: 100%;
+    
+    /* debug */
+    aspect-ratio: 2;
+    background-color: lightblue;
+}
+
+.overflow-hidden {
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.left-text-block{
+    display: flex;
+    height: 50px;
+    /* debug */
+    background-color: pink;
+    border: 1px solid black;
+}
+
+
 
 /* utilities +++++++++++++++++++++++++++++++++++++*/
+
+/* justify content  */
+
+.justify-sb{
+    justify-content: space-between;
+}
 
 /* heights */
 .height-7-p{
@@ -32,7 +71,7 @@
 /* bg colors +++++++++++++++++++++++++++++++++++++*/
 
 .bg-green {
-    background-color: green;
+    background-color: #009688;
 }
 
 .bg-red {
@@ -40,7 +79,7 @@
 }
 
 .bg-grey {
-    background-color: grey;
+    background-color: #d8dbd5;
 }
 
 
@@ -57,7 +96,7 @@
     /* debug */
     border: 5px solid black;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .main-container {
@@ -117,19 +156,17 @@
 
 #header-user-options {
 
-    /* debug */
-    background-color: pink;
-    height: 7%;
-    max-height: 50px;
 
 }
 
 #notifics {
 
+    display: flex;
+    align-items: center;
+
     /* debug */
     background-color: black;
-    height: 8%;
-    max-height: 50px;
+    height: 70px;
 
 }
 
@@ -143,7 +180,7 @@
 }
 
 #contact-list {
-
+    max-height: 81%;
     /* debug */
     background-color: fuchsia;
     flex-grow: 1;
@@ -171,8 +208,7 @@
 
     /* debug */
     background-color: blue;
-    height: 7%;
-    max-height: 50px;
+    height: 50px;
 
 }
 
