add: first picture and background

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --green-top: #009688;
-  }
+}
 
 /* approccio: desktop first  */
 
@@ -24,7 +24,7 @@
     height: 100%;
 }
 
-.pic-block{
+.pic-block {
     height: 100%;
     max-height: 50px;
     min-height: 30px;
@@ -35,9 +35,10 @@
     border: 1px solid green;
 }
 
-.options-block{
+
+.options-block {
     height: 100%;
-    
+
     /* debug */
     aspect-ratio: 2;
     background-color: lightblue;
@@ -48,7 +49,7 @@
     overflow-y: auto;
 }
 
-.left-text-block{
+.left-text-block {
     display: flex;
     height: 50px;
     /* debug */
@@ -62,12 +63,12 @@
 
 /* justify content  */
 
-.justify-sb{
+.justify-sb {
     justify-content: space-between;
 }
 
 /* heights */
-.height-7-p{
+.height-7-p {
     height: 7%;
 
 }
@@ -158,10 +159,7 @@
 
 
 
-#header-user-options {
-
-
-}
+#header-user-options {}
 
 #notifics {
 
@@ -174,6 +172,8 @@
 
 }
 
+/* search +++++++++++++++++++++++++++++++++++++ */
+
 #search {
 
     /* debug */
@@ -181,6 +181,13 @@
     height: 5%;
     max-height: 25px;
 
+}
+
+.pic-block img {
+    border-radius: 50%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 #contact-list {
@@ -219,11 +226,11 @@
 #messages {
 
     /* debug */
-    background-color: darkolivegreen;
+    background-image: url(../img/mine.jpg);
     flex-grow: 1;
 
 }
 
 #footer-user-chat {
-background-color: antiquewhite;
+    background-color: antiquewhite;
 }
