--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,19 @@
 
 }
 
+/* <!-- footer-user-chat +++++++++++++++++++++++++++++++++++++--> */
 
 #footer-user-chat {
+    height: 30px;
+    display: flex;
     background-color: antiquewhite;
+    align-items: center;
+}
+
+#footer-user-chat div {
+    padding: 0 10px;
+}
+
+#footer-user-chat input {
+    width: 80%;
 }
